objects/copado__Selenium_Test_Group__c.object
<CustomObject>
    <fields>
        <fullName>copado__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>copado__Selenium_Settings__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>All tests runs belonging to this Test Group will use these Selenium Settings.</inlineHelpText>
        <label>Selenium Settings</label>
        <referenceTo>copado__Selenium_Settings__c</referenceTo>
        <relationshipLabel>Selenium Test Groups</relationshipLabel>
        <relationshipName>Selenium_Test_Groups</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Status_Icon__c</fullName>
        <formula>IMAGE( 
CASE(TEXT(copado__Status__c), 

&apos;Completed with errors&apos;, &apos;/resource/&apos; &amp; IF($Setup.copado__Settings__c.copado__Namespace__c=&apos;none&apos;,&apos;&apos;,if(isblank($Setup.copado__Settings__c.copado__Namespace__c),&apos;copado__&apos;,$Setup.copado__Settings__c.copado__Namespace__c)) &amp; &apos;Statics/img/icons/warning16.png&apos;, 

&apos;Completed successfully&apos;, &apos;/resource/&apos; &amp; IF($Setup.copado__Settings__c.copado__Namespace__c=&apos;none&apos;,&apos;&apos;,if(isblank($Setup.copado__Settings__c.copado__Namespace__c),&apos;copado__&apos;,$Setup.copado__Settings__c.copado__Namespace__c)) &amp; &apos;Statics/img/icons/confirm16.png&apos;, 

&apos;In Progress&apos;, &apos;/resource/&apos; &amp; IF($Setup.copado__Settings__c.copado__Namespace__c=&apos;none&apos;,&apos;&apos;,if(isblank($Setup.copado__Settings__c.copado__Namespace__c),&apos;copado__&apos;,$Setup.copado__Settings__c.copado__Namespace__c)) &amp; &apos;Statics/img/icons/loading.gif&apos;,

&apos;Queued&apos;, &apos;/resource/&apos; &amp; IF($Setup.copado__Settings__c.copado__Namespace__c=&apos;none&apos;,&apos;&apos;,if(isblank($Setup.copado__Settings__c.copado__Namespace__c),&apos;copado__&apos;,$Setup.copado__Settings__c.copado__Namespace__c)) &amp; &apos;Statics/img/icons/loading.gif&apos;, 

&apos;/s.gif&apos;),

TEXT(copado__Status__c) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed with Errors</fullName>
                </value>
                <value>
                    <fullName>Completed Successfully</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Selenium Test Group</label>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__Selenium_Settings__c</columns>
        <columns>copado__Description__c</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Status_Icon__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Selenium Test Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Selenium Test Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>